@@ -5,7 +5,7 @@ module ActiveMerchant #:nodoc:
     end
   
     class Response
-      attr_reader :params, :message, :test, :authorization, :avs_result
+      attr_reader :params, :message, :test, :authorization, :avs_result, :ccv_result
       
       def success?
         @success
@@ -25,6 +25,7 @@ module ActiveMerchant #:nodoc:
         @authorization = options[:authorization]
         @fraud_review = options[:fraud_review]
         @avs_result = AVSResult.new(options[:avs_code]).to_hash
+        @ccv_result = CCVResult.new(options[:ccv_code]).to_hash
       end
     end
   end
