@@ -5,7 +5,7 @@ class AVSResultTest < Test::Unit::TestCase
     result = AVSResult.new('N')
     assert_equal 'N', result.code
     assert_equal AVSResult::CODES['N'], result.message
-    assert_equal :none, result.match_type
+    assert_equal :none, result.match
     assert result.failure?
   end
   
@@ -13,7 +13,7 @@ class AVSResultTest < Test::Unit::TestCase
     result = AVSResult.new('A')
     assert_equal 'A', result.code
     assert_equal AVSResult::CODES['A'], result.message
-    assert_equal :partial, result.match_type
+    assert_equal :partial, result.match
     assert result.failure?
   end
   
@@ -21,7 +21,7 @@ class AVSResultTest < Test::Unit::TestCase
     result = AVSResult.new('X')
     assert_equal 'X', result.code
     assert_equal AVSResult::CODES['X'], result.message
-    assert_equal :full, result.match_type
+    assert_equal :full, result.match
     assert_false result.failure?
   end
   
@@ -29,7 +29,7 @@ class AVSResultTest < Test::Unit::TestCase
     result = AVSResult.new(nil)
     assert_nil result.code
     assert_nil result.message
-    assert_nil result.match_type
+    assert_nil result.match
     assert_false result.failure?
   end
   
@@ -37,7 +37,7 @@ class AVSResultTest < Test::Unit::TestCase
     result = AVSResult.new(nil)
     assert_nil result.code
     assert_nil result.message
-    assert_nil result.match_type
+    assert_nil result.match
     assert_false result.failure?
   end
   
@@ -45,6 +45,6 @@ class AVSResultTest < Test::Unit::TestCase
     avs_data = AVSResult.new('X').to_hash
     assert_equal 'X', avs_data['code']
     assert_equal AVSResult::CODES['X'], avs_data['message']
-    assert_equal 'full', avs_data['match_type']
+    assert_equal 'full', avs_data['match']
   end
 end
